crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__document_handling__tests__document_handling_mixed_content.snap
---
source: crates/forge_domain/src/transformer/document_handling.rs
expression: snapshot
---
transformation: DocumentHandling
before:
  messages:
    - tool:
        name: mixed_tool
        call_id: call_1
        output:
          is_error: false
          values:
            - text: Before document
            - document:
                data: pdf_data
                mime_type: application/pdf
                filename: ~
            - text: After document
after:
  messages:
    - tool:
        name: mixed_tool
        call_id: call_1
        output:
          is_error: false
          values:
            - text: Before document
            - text: "[The document with ID 0 will be sent as an attachment in the next message]"
            - text: After document
    - text:
        role: User
        content: "[Here is the document attachment for ID 0]"
    - document:
        data: pdf_data
        mime_type: application/pdf
        filename: ~
